fix: 컴파일 오류 수정 및 엔티티 빌더 패턴 정리
- Transactional import 수정
  * jakarta.transaction.Transactional → org.springframework.transaction.annotation.Transactional
  * readOnly 파라미터 지원을 위해 Spring Transactional로 변경
  * 영향 파일: EquipmentIntegrationService, EquipmentJournalService,
    ExaminationJournalService, ExaminationResultService, ExaminationScheduleService,
    BloodBankService, HolidayService, RecessService, DisabilityService,
    DoctorTreatmentService, ExaminationService

- 엔티티 빌더 패턴 수정
  * @Builder 어노테이션 추가: EquipmentJournalEntity, BloodBankEntity,
    ExaminationJournalEntity, ExaminationResultEntity, ExaminationScheduleEntity
  * toBuilder() → builder() 사용으로 변경 (모든 필드 명시)
  * EquipmentIntegrationEntity에서 @Builder.Default 제거

- 타입 변환 수정
  * PatientNumber → Long: getPatientNo().getValue() 사용
  * examinationPrice: String ↔ Long 변환 로직 추가
  * DisabilityEntity: disabilityDeviceYN (String) → needsAssistiveDevice (Boolean)

- 기타 수정
  * ExaminationUpdateRequest import 추가
  * @AuthRole에서 RoleType enum을 String으로 변환
  * DailyStatistics 명시적 생성자 추가
  * getRecessCreate() → getCreatedDate() 변경
  * Collectors.toList() → toList() 변경